# usbscope-sw-lib

./: AD8370PGA.cpp  AD8370PGA.hpp  ADCClk.hpp  AcqCtrl.cpp  AcqCtrl.hpp  Board.cpp  Board.hpp  BoardRef.hpp  CMakeLists.txt  ClockOut.cpp  ClockOut.hpp  DAC47cx.cpp  DAC47cx.hpp  FEC.cpp  FEC.hpp  FWComm.cpp  FWComm.hpp  Flash.cpp  Flash.hpp  H5Smpl.cpp  H5Smpl.hpp  I2CDev.cpp  I2CDev.hpp  I2CFEC.cpp  I2CFEC.hpp  LED.cpp  LED.hpp  LICENSE.txt  Lmh6882PGA.cpp  Lmh6882PGA.hpp  Max195xxADC.cpp  Max195xxADC.hpp  PGA.cpp  PGA.hpp  PGAAD8370.cpp  PGAImpl.cpp  PGAImpl.hpp  PGALmh6882.cpp  PGALmh6882.hpp  README.md  (+5 more)
